@@ -20,5 +20,6 @@
 
 purpose "Command line interface to GSS, used to explain error codes."
 
-option "major" m "Describe a `major status' error code vaue in plain text." long no
+option "major" m "See gss.c for doc string" long no
+option "list-mechanisms" l "See gss.c for doc string" no
 option "quiet" q "Silent operation" flag off
